Fixed Item Viewer/Editor on Small Screens

--- a/css/global.css
+++ b/css/global.css
@@ -895,6 +895,8 @@ main {
   .itemDetailsContainer {
     width: 100%;
     height: 100%;
+    max-width: none;
+    max-height: none;
     border-radius: 0;
   }
 }
